# earth-1-lw8d0p

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  security-scan.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/config/elk/: elasticsearch.yml  kibana.yml  logstash.conf
infrastructure/config/grafana/: dashboard.json  datasource.yml
infrastructure/config/istio/: mesh-config.yaml
infrastructure/config/nginx/: nginx.conf
infrastructure/config/prometheus/: prometheus.yml
infrastructure/docker/: base.dockerfile  node.dockerfile  python.dockerfile
infrastructure/helm/matter/: Chart.yaml  values.yaml
infrastructure/helm/matter/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
infrastructure/kubernetes/api-gateway/: deployment.yaml  ingress.yaml  service.yaml
infrastructure/kubernetes/auth-service/: deployment.yaml  hpa.yaml  service.yaml
infrastructure/kubernetes/base/: configmap.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
infrastructure/kubernetes/cert-manager/: certificate.yaml  issuer.yaml
infrastructure/kubernetes/istio/: destinationrule.yaml  gateway.yaml  virtualservice.yaml
infrastructure/kubernetes/monitoring/elk/: deployment.yaml
infrastructure/kubernetes/monitoring/grafana/: deployment.yaml
infrastructure/kubernetes/monitoring/jaeger/: deployment.yaml
infrastructure/kubernetes/monitoring/prometheus/: deployment.yaml
infrastructure/kubernetes/planning-service/: deployment.yaml  hpa.yaml  service.yaml
infrastructure/kubernetes/search-service/: deployment.yaml  hpa.yaml  service.yaml
infrastructure/kubernetes/visualization-service/: deployment.yaml  hpa.yaml  service.yaml
infrastructure/scripts/: backup-db.sh  deploy.sh  init-db.sh  rollback.sh  setup-monitoring.sh
infrastructure/terraform/aws/: cloudfront.tf  eks.tf  elasticache.tf  kms.tf  main.tf  outputs.tf  provider.tf  rds.tf  route53.tf  s3.tf  variables.tf  vpc.tf  waf.tf
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  tsconfig.json
src/backend/api-gateway/: Dockerfile  package.json  tsconfig.json
src/backend/api-gateway/src/: app.ts
src/backend/api-gateway/src/config/: gateway.config.ts  rate-limit.config.ts
src/backend/api-gateway/src/middleware/: auth.middleware.ts  error.middleware.ts  logging.middleware.ts
src/backend/api-gateway/src/routes/: index.ts
src/backend/api-gateway/src/utils/: error.utils.ts
src/backend/api-gateway/tests/: gateway.test.ts
src/backend/auth-service/: Dockerfile  package.json  tsconfig.json
src/backend/auth-service/src/: app.ts
src/backend/auth-service/src/config/: auth.config.ts  database.config.ts  redis.config.ts
src/backend/auth-service/src/controllers/: auth.controller.ts
src/backend/auth-service/src/interfaces/: auth.interface.ts
src/backend/auth-service/src/middleware/: auth.middleware.ts
src/backend/auth-service/src/models/: user.model.ts
src/backend/auth-service/src/routes/: auth.routes.ts
src/backend/auth-service/src/services/: auth.service.ts
src/backend/auth-service/src/utils/: jwt.utils.ts
src/backend/auth-service/tests/: auth.test.ts
src/backend/planning-service/: Dockerfile  README.md  pyproject.toml
src/backend/planning-service/src/: __init__.py  app.py
src/backend/planning-service/src/config/: earthn_config.py  redis_config.py
src/backend/planning-service/src/controllers/: optimization_controller.py  planning_controller.py
src/backend/planning-service/src/models/: asset.py  collection_plan.py  requirement.py
src/backend/planning-service/src/schemas/: asset_schema.py  plan_schema.py
src/backend/planning-service/src/services/: earthn_service.py  optimization_service.py  planning_service.py
src/backend/planning-service/src/utils/: calculation_utils.py
src/backend/planning-service/tests/: test_optimization.py  test_planning.py
src/backend/search-service/: Dockerfile  README.md  pyproject.toml
src/backend/search-service/src/: __init__.py  app.py
src/backend/search-service/src/config/: database.py  redis_config.py
src/backend/search-service/src/controllers/: location_controller.py  search_controller.py
src/backend/search-service/src/models/: location.py  search.py
src/backend/search-service/src/schemas/: location_schema.py  search_schema.py
src/backend/search-service/src/services/: geocoding_service.py  search_service.py
src/backend/search-service/src/utils/: spatial_utils.py
src/backend/search-service/tests/: test_location_service.py  test_search_service.py
src/backend/shared/database/migrations/: 001_initial_schema.sql  002_spatial_extensions.sql  003_user_tables.sql  004_search_tables.sql
src/backend/shared/openapi/: auth-service.yaml  planning-service.yaml  search-service.yaml  visualization-service.yaml
src/backend/visualization-service/: Dockerfile  package.json  tsconfig.json
src/backend/visualization-service/src/: app.ts
src/backend/visualization-service/src/config/: database.config.ts
src/backend/visualization-service/src/controllers/: visualization.controller.ts
src/backend/visualization-service/src/interfaces/: visualization.interface.ts
src/backend/visualization-service/src/models/: result.model.ts
src/backend/visualization-service/src/routes/: visualization.routes.ts
src/backend/visualization-service/src/services/: d3.service.ts  export.service.ts
src/backend/visualization-service/src/utils/: format.utils.ts
src/backend/visualization-service/tests/: visualization.test.ts
src/web/: .dockerignore  .env.development  .env.production  .env.test  .eslintrc.ts  Dockerfile  README.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/public/: manifest.json  robots.txt
src/web/src/: App.tsx  index.tsx  vite-env.d.ts
(+94 files in other folders)
